# icu4x_blob_provider_locale_error

./: Cargo.toml  README.md
src/: data  main.rs
