[package]
name = "icu-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icu = { version = "1.2.0", features = ["serde"] }
icu_provider = { version = "1.2.0", features = ["serde"] }
icu_provider_blob = "1.2.0"
icu_testdata = { version = "1.2.0", features = ["buffer"] }
